--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@babel/register": "^7.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "SET NODE_ENV=production&& nodemon index.ts",
+    "dev": "SET NODE_ENV=development&& nodemon index.ts"
   },
   "author": "Danilo Mongelli",
   "license": "ISC"
