--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3",
     "ws": "^7.2.3"
   },
