--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.19.0",
     "esm": "^3.2.25",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
