--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "python-shell": "^1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
